style: add subtasks list max-height and overflow. fix subtask input button position and padding

--- a/styles/add-task-sutasks.css
+++ b/styles/add-task-sutasks.css
@@ -1,6 +1,6 @@
 .input-field-subtask {
     height: 48px;
-    padding: 0 48px 0 21px;
+    padding: 0 21px 0 21px;
     border: 1px solid var(--borderGrey);
     border-radius: 10px;
     font-size: 20px;
@@ -16,6 +16,30 @@
     }
 }
 
+.input-button {
+  position: absolute;
+  right: 21px;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  border: hidden;
+  background-color: var(--white);
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  &:hover {
+    background-color: var(--borderGrey);
+  }
+}
+
+#plus-icon {
+    margin-top: 4px;
+}
+
 .middle {
     position: absolute;
     right: 36px;
@@ -24,6 +48,20 @@
     width: 0;
     height: 24px;
     border: 1px solid var(--borderGrey);
+}
+
+.subtasks-list{
+    max-height: 144px;
+    overflow-y: auto;
+
+    &::-webkit-scrollbar {
+        width: 6px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background: var(--dark);
+        border-radius: 4px;
+    }
 }
 
 .subtask-list {
@@ -108,7 +146,6 @@
     border-radius: 50%;
     border: hidden;
     padding: 5px 5px;
-    margin: 0 8px;
     background-color: var(--white);
     cursor: pointer;
 
@@ -167,7 +204,7 @@
 
 .subtask-separator {
     position: absolute;
-    right: 10px;
+    right: 25px;
     top: 50%;
     transform: translateY(-50%);
     width: 1px;
